			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04w: *********************************

IMP: (8/16/06, RK) Create a new plugin, PIE for Port Interchange Experiment

IMP/MAN: (8/16/06, SMR) New commands in "Edit / Selection":
     "Select Next Like This" and "Select Previous Like This" (Bug #879).

BUG: (8/16/06, SMR) Primitive nodes don't auto-route (Bug #1176).
FIX: In AutoStitch.comparePoly(), don't exclude ports due to quad-tree.

IMP: (8/15/06, RK) Comment out obsolete code, old hash code partitioning

BUG: (8/14/06, SMR) Autorouter incorrectly connects arcs to rotated nodes (Bug #1199).
FIX: In AutoStitch.compareNodeWithArc, transform node polygons.

BUG: (8/14/06, SMR) Interactive sizing of rotated nodes is wrong (Bug #1201).
FIX: In SizeListener.getNewNodeSize(), determine new center properly.

BUG: (8/10/06, SMR) Color chooser patch not always correct (Bug #1198).
FIX: In ColorPatternPanel.setColorPattern() set the preview color.

BUG: (8/10/06, GVG) PostScript Export ignores "instance names" flag (bug #1197)
FIX: Checking if "instance names" is on/off

************************* Version 8.04v: *********************************

BUG: (8/7/06, GVG) auto-stitch exception (Bug #1194) due to refactoring done for AutoStitch and regressions (7/21/06).
FIX: check if lists are null.

IMP: (8/4/06, GVG) Selected layer pattern not highlighted in patterns palette (Bug #1193)
Basic marking done. It might be beneficial to rewrite the pattern selection section.

BUG: (8/3/06, GVG) Exception in LayerDrawing because of null layer in getRaster() (Bug #1191).
This seems due to artwork in layout cells.
FIX: If layer==null in LayerDrawing -> layer = Artwork.tech.defaultLayer. Similar fix with Graphics == null.
     In Technology.getShapeOfArc call setLayer for arrowed arcs.
